# monocle

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  DUCKDB_MIGRATION_PLAN.md  Dockerfile  LICENSE  README.md  REFACTOR_TODO.md  REVISION_PLAN.md  SSE_SEARCH_STATISTICS_DESIGN.md  SSE_SERVICE_OVERHAUL_DESIGN.md  WEBSOCKET_DESIGN.md  WEBSOCKET_TODOS.md  WEB_API_DESIGN.md  docker-compose.yml  monocle.toml.example
.github/workflows/: docker-dev.yml  docker.yml  release.yml  rust.yml
docs/: db-refresh-perf-investigation.md
examples/: README.md  as2rel_lens.rs  db_refresh_bench.rs  inspect_lens.rs  ip_lens.rs  parse_lens.rs  pfx2as_lens.rs  rpki_lens.rs  search_lens.rs  sse_browser_test.html  time_lens.rs  ws_client_all.js  ws_client_all.rs
examples/bgpkit/: bgp_search.rs  country_lookup.rs  mrt_parsing.rs  rpki_validation.rs  search_bgp_messages.rs
examples/database/: as2rel_queries.rs  database.rs  database_basics.rs  pfx2as_search.rs
examples/full/: inspect_unified.rs  progress_callbacks.rs
examples/standalone/: output_formats.rs  time_parsing.rs
src/: as2org.rs  bin.rs  config.rs  country.rs  database.rs  lib.rs  monocle.rs  msg_store.rs  rpki.rs  time.rs  utils.rs
src/database/: README.md  mod.rs
src/database/core/: connection.rs  duckdb_conn.rs  duckdb_query.rs  duckdb_schema.rs  mod.rs  schema.rs
src/database/monocle/: as2org.rs  as2rel.rs  asinfo.rs  duckdb_as2org.rs  duckdb_as2rel.rs  duckdb_monocle.rs  file_cache.rs  mod.rs  pfx2as.rs  pfx2as_cache.rs  rpki.rs  rpki_cache.rs
src/database/session/: mod.rs  msg_store.rs  rib_store.rs
src/datasets/: as2org.rs  as2rel.rs  country.rs  ip.rs  mod.rs  pfx2as.rs  radar.rs
src/datasets/rpki/: commons.rs  mod.rs  roa.rs  validator.rs
src/filters/: mod.rs  parse.rs  search.rs
src/lens/: README.md  country.rs  mod.rs  utils.rs
src/lens/as2org/: args.rs  mod.rs  types.rs
src/lens/as2rel/: args.rs  mod.rs  types.rs
src/lens/country/: mod.rs
src/lens/inspect/: mod.rs  types.rs
src/lens/ip/: mod.rs
src/lens/parse/: filter_file.rs  mod.rs  text_dump.rs
src/lens/pfx2as/: mod.rs
src/lens/rib/: mod.rs
src/lens/rpki/: commons.rs  mod.rs  rtr.rs  sql_validator.rs  validator.rs
src/lens/search/: mod.rs  query_builder.rs
src/lens/time/: mod.rs
src/rpki/: aspa.rs  mod.rs  validator.rs
src/server/: README.md  REFACTOR_PLAN.md  auth.rs  handler.rs  http.rs  mod.rs  op_sink.rs  operations.rs  protocol.rs  query.rs  router.rs  search.rs  sink.rs
src/server/handlers/: as2org.rs  as2rel.rs  country.rs  database.rs  inspect.rs  ip.rs  mod.rs  pfx2as.rs  rpki.rs  system.rs  time.rs
src/server/rest/: as2rel.rs  country.rs  database.rs  inspect.rs  ip.rs  mod.rs  pfx2as.rs  rpki.rs  time.rs
tests/: rpki_cli.rs
