[package]
name = "monocle"
version = "1.0.2"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/monocle"
documentation = "https://docs.rs/monocle"
description = """
A commandline application to search, parse, and process BGP information in public sources.
"""
keywords = ["bgp", "bgpkit", "mrt"]

[[bin]]
name = "monocle"
path = "src/bin/monocle.rs"
required-features = ["cli"]

# =============================================================================
# Examples
# =============================================================================

[[example]]
name = "search_bgp_messages"
path = "examples/bgpkit/search_bgp_messages.rs"
required-features = ["lib"]

[[example]]
name = "ws_client_all"
path = "examples/ws_client_all.rs"
required-features = ["server"]

[[example]]
name = "time_parsing"
path = "examples/standalone/time_parsing.rs"
required-features = ["lib"]

[[example]]
name = "output_formats"
path = "examples/standalone/output_formats.rs"
required-features = ["lib"]

[[example]]
name = "database_basics"
path = "examples/database/database_basics.rs"
required-features = ["lib"]

[[example]]
name = "as2rel_queries"
path = "examples/database/as2rel_queries.rs"
required-features = ["lib"]

[[example]]
name = "pfx2as_search"
path = "examples/database/pfx2as_search.rs"
required-features = ["lib"]

[[example]]
name = "country_lookup"
path = "examples/bgpkit/country_lookup.rs"
required-features = ["lib"]

[[example]]
name = "rpki_validation"
path = "examples/bgpkit/rpki_validation.rs"
required-features = ["lib"]

[[example]]
name = "mrt_parsing"
path = "examples/bgpkit/mrt_parsing.rs"
required-features = ["lib"]

[[example]]
name = "inspect_unified"
path = "examples/full/inspect_unified.rs"
required-features = ["lib"]

[[example]]
name = "progress_callbacks"
path = "examples/full/progress_callbacks.rs"
required-features = ["lib"]

[features]
default = ["cli"]

# =============================================================================
# Feature flags
# =============================================================================

# Library feature - includes all database operations, lenses, and display
lib = [
    # Database
    "dep:oneio",
    "dep:ipnet",
    # Lenses
    "dep:chrono-humanize",
    "dep:dateparser",
    "dep:humantime",
    "dep:bgpkit-broker",
    "dep:bgpkit-parser",
    "dep:bgpkit-commons",
    "dep:itertools",
    "dep:radar-rs",
    "dep:rayon",
    # Display (always included with lib)
    "dep:tabled",
    "dep:json_to_table",
]

# WebSocket server feature - for programmatic API access
# Can be used standalone or with CLI
server = [
    "lib",
    "dep:axum",
    "dep:tokio",
    "dep:tokio-util",
    "dep:futures",
    "dep:uuid",
    "dep:async-trait",
    "dep:tower-http",
]

# CLI feature - full binary with all functionality
# Includes lib and server features
cli = [
    "lib",
    "server",
    "dep:clap",
    "dep:indicatif",
    "dep:tracing-subscriber",
    "dep:libc",
]

# Full build (backward compatibility alias)
full = ["cli"]

[dependencies]
# =============================================================================
# Core dependencies (always included)
# =============================================================================
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15", features = ["toml"] }
dirs = "6"
dotenvy = "0.15"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# =============================================================================
# Library dependencies (enabled by "lib" feature)
# =============================================================================

# Database
ipnet = { version = "2.10", features = ["json"], optional = true }
oneio = { version = "0.20.1", default-features = false, features = ["https", "gz", "bz", "json"], optional = true }

# Lenses
chrono-humanize = { version = "0.2", optional = true }
dateparser = { version = "0.2", optional = true }
humantime = { version = "2.1", optional = true }
bgpkit-broker = { version = "0.10.1", optional = true }
bgpkit-parser = { version = "0.15.0", features = ["serde"], optional = true }
bgpkit-commons = { version = "0.10.1", features = ["asinfo", "rpki", "countries"], optional = true }
itertools = { version = "0.14", optional = true }
radar-rs = { version = "0.1.0", optional = true }
rayon = { version = "1.8", optional = true }

# Display
tabled = { version = "0.20", optional = true }
json_to_table = { version = "0.12.0", optional = true }

# =============================================================================
# Server dependencies (enabled by "server" feature)
# =============================================================================
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
async-trait = { version = "0.1", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# =============================================================================
# CLI-only dependencies (enabled by "cli" feature)
# =============================================================================
clap = { version = "4.1", features = ["derive"], optional = true }
libc = { version = "0.2", optional = true }
indicatif = { version = "0.18.0", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
bgpkit-parser = { version = "0.15.0", features = ["serde"] }
tempfile = "3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
